docs/en/4.0.0/api/Orm.md
#ORM
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;11</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#maddModel" data-target="cMethodaddModel" class="autouncollapse">addModel</a></li><li><a href="#mdatabaseFullReset" data-target="cMethoddatabaseFullReset" class="autouncollapse">databaseFullReset</a></li><li><a href="#mdatabaseFullResetAndLogout" data-target="cMethoddatabaseFullResetAndLogout" class="autouncollapse">databaseFullResetAndLogout</a></li><li><a href="#mdatabaseFullResetEx" data-target="cMethoddatabaseFullResetEx" class="autouncollapse">databaseFullResetEx</a></li><li><a href="#mdatabaseFullclientResetAndLogout" data-target="cMethoddatabaseFullclientResetAndLogout" class="autouncollapse">databaseFullclientResetAndLogout</a></li><li><a href="#mdatabaseLocalReset" data-target="cMethoddatabaseLocalReset" class="autouncollapse">databaseLocalReset</a></li><li><a href="#mexport" data-target="cMethodexport" class="autouncollapse"><span class='text-error'>export</span></a></li><li><a href="#mgetClientId" data-target="cMethodgetClientId" class="autouncollapse">getClientId</a></li><li><a href="#mgetModel" data-target="cMethodgetModel" class="autouncollapse">getModel</a></li><li><a href="#mhaveLocalChanges" data-target="cMethodhaveLocalChanges" class="autouncollapse">haveLocalChanges</a></li><li><a href="#mimport" data-target="cMethodimport" class="autouncollapse"><span class='text-error'>import</span></a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Add ORM model, create ORM object</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Get Model by name</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">ORM databaseFullResetEx Method Examples</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>This JavaScript API class allows you to interact with the local RHOM database and programatically add models or get references to models.</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript</p>

<h2>Ruby Usage</h2>

<p>For Ruby access to the RHOM database please see the <a href="/api/rhom-api">Rhom Ruby API guide</a>.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='maddModel'/><div class=' method  js android ios wp8' id='maddModel'><h3><strong  >addModel</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info"></span> Anoynomous Function methods)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#maddModel1" data-toggle="tab">Description</a></li><li ><a href="#maddModel2" data-toggle="tab">Parameters</a></li><li ><a href="#maddModel4" data-toggle="tab">Return</a></li><li ><a href="#maddModel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-addModel'><div class="tab-pane fade active in" id="maddModel1"><p>Creates an ORM model reference.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="maddModel2"><div><p><strong>Parameters</strong></p><ul><li>Anoynomous Function methods : <span class='text-info'></span><p> </p></li><ul><li>modelName("value") : <span class='text-info'>STRING</span><p>The name of your model. </p></li><li>enable("value") : <span class='text-info'>STRING</span> <span class='label label-info'>Optional</span><p>Enables Model Properties. </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>sync</dt><dd>If set then model is set for RhoConnect Sync</dt><dt>propertyBag</dt><dd>(Default) Model will be of type propertyBag.</dt><dt>fixedSchema</dt><dd>Model will be of type fixedSchema</dt></dl></li><li>property("name","type") : <span class='text-info'>STRING,STRING</span> <span class='label label-info'>Optional</span><p>Used to create properties on your model. </p></li><ul><li>name : <span class='text-info'>STRING</span><p>The name of the property </p></li><li>type : <span class='text-info'>STRING</span><p>The type of property value: String, Float, integer, Varchar, Blob - String is default </p></li></ul><li>addIndex("name",[colArray]) : <span class='text-info'>STRING, ARRAY</span> <span class='label label-info'>Optional</span><p>Add an index to your fixedSchema model. </p></li><ul><li>name : <span class='text-info'>STRING</span><p>The name of the index </p></li><li>colArray : <span class='text-info'>ARRAY</span><p>Array of model column names to use in index, Ex: ['name','qty'] </p></li></ul><li>addUniqueIndex("name",[colArray]) : <span class='text-info'>STRING, ARRAY</span> <span class='label label-info'>Optional</span><p>Add an index to your fixedSchema model. </p></li><ul><li>name : <span class='text-info'>STRING</span><p>The name of the index </p></li><li>colArray : <span class='text-info'>ARRAY</span><p>Array of model column names to use in index, Ex: ['name','qty'] </p></li></ul><li>belongs_to("name") : <span class='text-info'>STRING</span> <span class='label label-info'>Optional</span><p>Add belongs_to association to another defined model, for sync models. Comma separted String for more than one model. </p></li><li>set(property,value) : <span class='text-info'>STRING,VALUE</span> <span class='label label-info'>Optional</span><p>Set Behavior of this model. Possible `property` options and corresponding values: </p></li><ul><li>partition : <span class='text-info'>STRING</span><p>The partition to use for this model. Partitions can be used to segment the data and keep non-synched data seperate from synched models. Possible `values` </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>local</dt><dd>This partition is used automatically if the model is not a sync model</dt><dt>user</dt><dd>This partition is used automatically if the model is a sync model</dt></dl></li><li>sync_type : <span class='text-info'>STRING</span><p>Sets the type of sync it will be.  </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>none</dt><dd>If data model is not a sync model</dt><dt>incremental</dt><dd>Used when the data model is a sync model. Just syncs changes.</dt></dl></li><li>sync_priority : <span class='text-info'>INTEGER</span><p>Determines how frequently to check for changes. In seconds. Default is 1000.  </p></li></ul></ul></ul></div></div><div class="tab-pane fade" id="maddModel3"></div><div class="tab-pane fade" id="maddModel4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Model</li></ul></div></div><div class="tab-pane fade" id="maddModel6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.addModel(<span class="text-info"></span> Anoynomous Function methods)</code> </li></ul></li></ul></div></div></div>  </div><a name ='mdatabaseFullReset'/><div class=' method  js android ios wp8' id='mdatabaseFullReset'><h3><strong  >databaseFullReset</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">BOOLEAN</span> resetClientInfo, <span class="text-info">BOOLEAN</span> resetLocalModels)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseFullReset1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseFullReset2" data-toggle="tab">Parameters</a></li><li ><a href="#mdatabaseFullReset4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseFullReset6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseFullReset'><div class="tab-pane fade active in" id="mdatabaseFullReset1"><p>Deletes all records from the property bag and model tables.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseFullReset2"><div><p><strong>Parameters</strong></p><ul><li>resetClientInfo : <span class='text-info'>BOOLEAN</span> <span class='label label-info'>Optional</span><p>true to clean the client_info table, false otherwise. False on default</p></li><li>resetLocalModels : <span class='text-info'>BOOLEAN</span> <span class='label label-info'>Optional</span><p>true to clean local (non-synced) models, false otherwise. Reset all models</p></li></ul></div></div><div class="tab-pane fade" id="mdatabaseFullReset3"></div><div class="tab-pane fade" id="mdatabaseFullReset4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdatabaseFullReset6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.databaseFullReset(<span class="text-info">BOOLEAN</span> resetClientInfo, <span class="text-info">BOOLEAN</span> resetLocalModels)</code> </li></ul></li></ul></div></div></div>  </div><a name ='mdatabaseFullResetAndLogout'/><div class=' method  js android ios wp8' id='mdatabaseFullResetAndLogout'><h3><strong  >databaseFullResetAndLogout</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseFullResetAndLogout1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseFullResetAndLogout4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseFullResetAndLogout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseFullResetAndLogout'><div class="tab-pane fade active in" id="mdatabaseFullResetAndLogout1"><p>Deletes all records from the property bag and model tables.  Logout the user from RhoConnectClient. For examples, see Resetting the Database in Using the Local Database with ORM.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseFullResetAndLogout2"></div><div class="tab-pane fade" id="mdatabaseFullResetAndLogout3"></div><div class="tab-pane fade" id="mdatabaseFullResetAndLogout4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdatabaseFullResetAndLogout6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.databaseFullResetAndLogout()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mdatabaseFullResetEx'/><div class=' method  js android ios wp8' id='mdatabaseFullResetEx'><h3><strong  >databaseFullResetEx</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseFullResetEx1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseFullResetEx2" data-toggle="tab">Parameters</a></li><li ><a href="#mdatabaseFullResetEx4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseFullResetEx6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseFullResetEx'><div class="tab-pane fade active in" id="mdatabaseFullResetEx1"><p>Deletes all records from the property bag and model tables for the model names passed in parameters.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseFullResetEx2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p>Properties map. </p></li><ul><li>models : <span class='text-info'>ARRAY</span><p>Array of models names to reset. </p></li><li>reset_client_info : <span class='text-info'>BOOLEAN</span> <span class='label label-info'>Optional</span><p>If set to true, client_info table will be cleaned. False on default</p></li><li>reset_local_models : <span class='text-info'>BOOLEAN</span> <span class='label label-info'>Optional</span><span class='label '> Default: false</span><p>If set to true, local(non-synced models) will be cleaned. Reset all models</p></li></ul></ul></div></div><div class="tab-pane fade" id="mdatabaseFullResetEx3"></div><div class="tab-pane fade" id="mdatabaseFullResetEx4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdatabaseFullResetEx6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.databaseFullResetEx(<span class="text-info">HASH</span> propertyMap)</code> </li></ul></li></ul></div></div></div>  </div><a name ='mdatabaseFullclientResetAndLogout'/><div class=' method  js android ios wp8' id='mdatabaseFullclientResetAndLogout'><h3><strong  >databaseFullclientResetAndLogout</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseFullclientResetAndLogout1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseFullclientResetAndLogout4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseFullclientResetAndLogout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseFullclientResetAndLogout'><div class="tab-pane fade active in" id="mdatabaseFullclientResetAndLogout1"><p>Deletes all records from the property bag and model tables.  Logout the user from RhoConnectClient and erase all RhoConnectClient device information. Equivalent to ORM::ORM.databaseFullReset(true) followed by RhoConnectClient.logout.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseFullclientResetAndLogout2"></div><div class="tab-pane fade" id="mdatabaseFullclientResetAndLogout3"></div><div class="tab-pane fade" id="mdatabaseFullclientResetAndLogout4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdatabaseFullclientResetAndLogout6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.databaseFullclientResetAndLogout()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mdatabaseLocalReset'/><div class=' method  js android ios wp8' id='mdatabaseLocalReset'><h3><strong  >databaseLocalReset</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseLocalReset1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseLocalReset4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseLocalReset6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseLocalReset'><div class="tab-pane fade active in" id="mdatabaseLocalReset1"><p>Reset only local (non-sync-enabled) models.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseLocalReset2"></div><div class="tab-pane fade" id="mdatabaseLocalReset3"></div><div class="tab-pane fade" id="mdatabaseLocalReset4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdatabaseLocalReset6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.databaseLocalReset()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mexport'/><div class=' method  js android ios wp8' id='mexport'><h3><strong  ><span class="text-error">export</span></strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mexport1" data-toggle="tab">Description</a></li><li ><a href="#mexport4" data-toggle="tab">Return</a></li><li ><a href="#mexport6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-export'><div class="tab-pane fade active in" id="mexport1"><span class='label label-important'>Deprecated</span> <p>Export db</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mexport2"></div><div class="tab-pane fade" id="mexport3"></div><div class="tab-pane fade" id="mexport4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mexport6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.export()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mgetClientId'/><div class=' method  js android ios wp8' id='mgetClientId'><h3><strong  >getClientId</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetClientId1" data-toggle="tab">Description</a></li><li ><a href="#mgetClientId4" data-toggle="tab">Return</a></li><li ><a href="#mgetClientId6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getClientId'><div class="tab-pane fade active in" id="mgetClientId1"><p>Returns the current sync client id.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mgetClientId2"></div><div class="tab-pane fade" id="mgetClientId3"></div><div class="tab-pane fade" id="mgetClientId4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mgetClientId6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.getClientId()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mgetModel'/><div class=' method  js android ios wp8' id='mgetModel'><h3><strong  >getModel</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">String</span> modelName)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetModel1" data-toggle="tab">Description</a></li><li ><a href="#mgetModel2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetModel4" data-toggle="tab">Return</a></li><li ><a href="#mgetModel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getModel'><div class="tab-pane fade active in" id="mgetModel1"><p>Returns a model.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mgetModel2"><div><p><strong>Parameters</strong></p><ul><li>modelName : <span class='text-info'>String</span><p>Name of the model you want returned. </p></li></ul></div></div><div class="tab-pane fade" id="mgetModel3"></div><div class="tab-pane fade" id="mgetModel4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Model</li></ul></div></div><div class="tab-pane fade" id="mgetModel6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.getModel(<span class="text-info">String</span> modelName)</code> </li></ul></li></ul></div></div></div>  </div><a name ='mhaveLocalChanges'/><div class=' method  js android ios wp8' id='mhaveLocalChanges'><h3><strong  >haveLocalChanges</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhaveLocalChanges1" data-toggle="tab">Description</a></li><li ><a href="#mhaveLocalChanges4" data-toggle="tab">Return</a></li><li ><a href="#mhaveLocalChanges6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-haveLocalChanges'><div class="tab-pane fade active in" id="mhaveLocalChanges1"><p>Returns true if any of the Rhodes model objects have local database changes that need to be synchronized, false otherwise.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mhaveLocalChanges2"></div><div class="tab-pane fade" id="mhaveLocalChanges3"></div><div class="tab-pane fade" id="mhaveLocalChanges4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN</li></ul></div></div><div class="tab-pane fade" id="mhaveLocalChanges6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.haveLocalChanges()</code> </li></ul></li></ul></div></div></div>  </div><a name ='mimport'/><div class=' method  js android ios wp8' id='mimport'><h3><strong  ><span class="text-error">import</span></strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> zipName)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mimport1" data-toggle="tab">Description</a></li><li ><a href="#mimport2" data-toggle="tab">Parameters</a></li><li ><a href="#mimport4" data-toggle="tab">Return</a></li><li ><a href="#mimport6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-import'><div class="tab-pane fade active in" id="mimport1"><span class='label label-important'>Deprecated</span> <p>Import db</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mimport2"><div><p><strong>Parameters</strong></p><ul><li>zipName : <span class='text-info'>STRING</span><p>The name of the zip file </p></li></ul></div></div><div class="tab-pane fade" id="mimport3"></div><div class="tab-pane fade" id="mimport4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN</li></ul></div></div><div class="tab-pane fade" id="mimport6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.ORM.import(<span class="text-info">STRING</span> zipName)</code> </li></ul></li></ul></div></div></div>  </div></div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Add ORM model, create ORM object</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">

              This example describes creating model and adding model object.
            <ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

                

var productModel = Rho.ORM.addModel(function(model){
  model.modelName("Product");
  model.enable("sync");
  model.property("name","string");
  model.property("brand","string");
  model.property("price","float");
  model.set("partition","user");
});

// create model object and save it to database
var product = productModel.create({
  brand: 'Apple',
  name: 'iPhone5',
  price: 199.99});

// read product from database
var product = productModel.find('first');
product.get('brand'); // Apple
product.get('name'); // iPhone5

              </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Get Model by name</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">

           Get a model
       <ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

   
// The model 'Product' must have been defined in JavaScript execution earlier 
// in order for 'getModel' to work properly. 

// The models generated in RhoStudio, are not accessible in JavaScript unless 
// the classes are defined via the  Rho.ORM.addModel api


// Get a model by its name after it has been added
var productModel = Rho.ORM.getModel("Product");

           
         </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>ORM databaseFullResetEx Method Examples</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">

              Delete all Rhodes model objects for a source, filtering by conditions.
            <ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

                
Rho.ORM.databaseFullResetEx({'models' : ['Product', 'Customer'], 'reset_client_info' : true, 'reset_local_models' : true} 
              </code></pre></div></div>  </div></div></div></div></div>